--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -5,10 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hjk</groupId>
-    <artifactId>example-consumer</artifactId>
+    <artifactId>consumer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <dependency>
+            <groupId>com.hjk</groupId>
+            <artifactId>rpc-easy</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.hjk</groupId>
             <artifactId>rpc-core</artifactId>
